traces/trace-istio-kuadrant/demo/fake-service.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: bff-service
  namespace: connlink
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fake-service
  template:
    metadata:
      labels:
        app: fake-service
    spec:
      containers:
        - name: container
          image: 'nicholasjackson/fake-service:v0.26.2'
          ports:
            - containerPort: 9090
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: bff-service
  namespace: connlink
spec:
  selector:
    app: fake-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9090
